new layout admin 1

--- a/DATN_F21/src/main/resources/templates/layoutAdmin/index.html
+++ b/DATN_F21/src/main/resources/templates/layoutAdmin/index.html
@@ -11,15 +11,11 @@
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
     crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-    crossorigin="anonymous"></script>
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>-->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-    crossorigin="anonymous"></script>
-<script
-	src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.2/angular.min.js"></script>
-<link href="/static/css/admin.css">
+    crossorigin="anonymous"></script> 
+<link href="/css/admin.css" rel="stylesheet">
 
 </head>
 <body class="container_Admin">
@@ -28,7 +24,7 @@
 		<div th:replace="/layoutAdmin/_menu.html"></div>
 	</div>
 
-	<div class="row">
+	<div class="row" style="background-color: #f6f6f6;">
 		<aside class="col-sm-3">
 			<div th:replace="/layoutAdmin/_cart-info.html"></div>
 		</aside>
@@ -38,8 +34,8 @@
 
 	</div>
 
-	<footer>
+	<!-- <footer>
 		<div th:replace="/layoutAdmin/_footer.html"></div>
-	</footer>
+	</footer> -->
 </body>
 </html>
