--- a/DATN_F21/src/main/resources/templates/layoutAdmin/_menu.html
+++ b/DATN_F21/src/main/resources/templates/layoutAdmin/_menu.html
@@ -1,5 +1,15 @@
-<div xmlns:th = "http://www.thymeleaf.org">
-<nav>
-<h2>Hello MenuAD</h2>
-   </nav>
+<div xmlns:th="http://www.thymeleaf.org">
+   <main>
+      <div class="headers">
+          <header class="row">
+              <div class="col-sm-9">
+                  <a href="#"><img th:src="@{|/img/logo.jpg|}" alt="no"></a>
+              </div>
+              <div class="col-sm-3">
+                  <img th:src="@{|/img/banner/userim.jpg|}" class="rounded-circle" alt="A girl" height="40px" width="40px">
+                  Admin
+              </div>
+          </header>
+      </div>
+  </main>
 </div>
