add view admin2

--- a/DATN_F21/src/main/resources/static/css/admin.css
+++ b/DATN_F21/src/main/resources/static/css/admin.css
@@ -33,7 +33,7 @@
                 Category
   -----------------------------------------------*/
 .category__main {
-	display : flex;
+	display: flex;
 	justify-content: center;
 	align-items: center;
 	min-height: 100vh;
@@ -43,8 +43,7 @@
 	margin-left: 10px;
 }
 
-.category_u
-{
+.category_u {
 	margin-top: -18px;
 	margin-left: 17px;
 }
@@ -139,9 +138,8 @@
                 UserAD
   -----------------------------------------------*/
 /*List*/
-.main_UserList
-{
-	min-height: 720px;	
+.main_UserList {
+	min-height: 720px;
 	background-color: white;
 }
 
@@ -189,21 +187,22 @@
 	margin: 30px auto;
 }
 
-.foodterUL
-{
+.foodterUL {
 	display: flex;
-  justify-content: center;
+	justify-content: center;
 }
 
 /*List End*/
 /*CreateUser*/
 .containerUs {
 	margin: 10px;
+	background-color: white;
 }
 
-.containerUs h5 {
-	text-align: center;
+.containerUs .row .hello h5{
+	display: flex; 
 	font-size: 26px;
+	justify-content: center;
 }
 
 .containerUs .row {
