--- a/DATN_F21/src/main/resources/templates/viewsUser/product-detail.html
+++ b/DATN_F21/src/main/resources/templates/viewsUser/product-detail.html
@@ -17,7 +17,7 @@
 							</div>
 							<div class="ltn__breadcrumb-list">
 								<ul>
-									<li><a href="index.html">Trang chủ</a></li>
+									<li><a href="index">Trang chủ</a></li>
 									<li>Chi tiết sản phẩm</li>
 								</ul>
 							</div>
@@ -113,8 +113,8 @@
 													</div>
 												</li>
 												<li>
-													<a href="#" class="theme-btn-1 btn btn-effect-1" title="Add to Cart"
-														data-toggle="modal" data-target="#add_to_cart_modal">
+													<a href="/index/cart" class="theme-btn-1 btn btn-effect-1"
+														title="Add to Cart">
 														<i class="fas fa-shopping-cart"></i>
 														<span>ADD TO CART</span>
 													</a>
@@ -191,7 +191,7 @@
 											</a>
 										</li>
 										<li>
-											<a href="#" title="Add to Cart" data-toggle="modal"
+											<a href="/index/cart" title="Add to Cart" data-toggle="modal"
 												data-target="#add_to_cart_modal">
 												<i class="fas fa-shopping-cart"></i>
 											</a>
@@ -235,7 +235,7 @@
 											</a>
 										</li>
 										<li>
-											<a href="#" title="Add to Cart" data-toggle="modal"
+											<a href="/index/cart" title="Add to Cart" data-toggle="modal"
 												data-target="#add_to_cart_modal">
 												<i class="fas fa-shopping-cart"></i>
 											</a>
@@ -279,7 +279,7 @@
 											</a>
 										</li>
 										<li>
-											<a href="#" title="Add to Cart" data-toggle="modal"
+											<a href="/index/cart" title="Add to Cart" data-toggle="modal"
 												data-target="#add_to_cart_modal">
 												<i class="fas fa-shopping-cart"></i>
 											</a>
@@ -323,7 +323,7 @@
 											</a>
 										</li>
 										<li>
-											<a href="#" title="Add to Cart" data-toggle="modal"
+											<a href="/index/cart" title="Add to Cart" data-toggle="modal"
 												data-target="#add_to_cart_modal">
 												<i class="fas fa-shopping-cart"></i>
 											</a>
@@ -367,7 +367,7 @@
 											</a>
 										</li>
 										<li>
-											<a href="#" title="Add to Cart" data-toggle="modal"
+											<a href="/index/cart" title="Add to Cart" data-toggle="modal"
 												data-target="#add_to_cart_modal">
 												<i class="fas fa-shopping-cart"></i>
 											</a>
@@ -411,7 +411,7 @@
 											</a>
 										</li>
 										<li>
-											<a href="#" title="Add to Cart" data-toggle="modal"
+											<a href="/index/cart" title="Add to Cart" data-toggle="modal"
 												data-target="#add_to_cart_modal">
 												<i class="fas fa-shopping-cart"></i>
 											</a>
@@ -454,21 +454,22 @@
 											<img src="/img/icons/icon-img/13.png" alt="#">
 										</div>
 										<div class="ltn__feature-info">
-                                            <h4>Thực phẩm từ tự nhiên</h4>
-                                            <p>Shop cho bạn đổi trả trong vòng 2 giờ sau khi thanh toán.</p>
-                                            <p>Sau 2 giờ shop không giải quyết bất kỳ vấn đề nào về sản phẩm.</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-xl-6 col-md-12 col-12">
-                                    <div class="ltn__feature-item ltn__feature-item-8">
-                                        <div class="ltn__feature-icon">
-                                            <img src="/img/icons/icon-img/14.png" alt="#">
-                                        </div>
-                                        <div class="ltn__feature-info">
-                                            <h4>Giao hàng nhanh chóng</h4>
-                                            <p>Chúng tôi sẽ ưu tiên vấn đề thời gian để tối ưu chất lượng sản phẩm, mong mang lại cho bạn nguồn thực phẩm tốt nhất.</p>
-                                        </div>
+											<h4>Thực phẩm từ tự nhiên</h4>
+											<p>Shop cho bạn đổi trả trong vòng 2 giờ sau khi thanh toán.</p>
+											<p>Sau 2 giờ shop không giải quyết bất kỳ vấn đề nào về sản phẩm.</p>
+										</div>
+									</div>
+								</div>
+								<div class="col-xl-6 col-md-12 col-12">
+									<div class="ltn__feature-item ltn__feature-item-8">
+										<div class="ltn__feature-icon">
+											<img src="/img/icons/icon-img/14.png" alt="#">
+										</div>
+										<div class="ltn__feature-info">
+											<h4>Giao hàng nhanh chóng</h4>
+											<p>Chúng tôi sẽ ưu tiên vấn đề thời gian để tối ưu chất lượng sản phẩm, mong
+												mang lại cho bạn nguồn thực phẩm tốt nhất.</p>
+										</div>
 									</div>
 								</div>
 							</div>
