--- a/DATN_F21/src/main/resources/templates/LayoutUser/_menu.html
+++ b/DATN_F21/src/main/resources/templates/LayoutUser/_menu.html
@@ -8,7 +8,7 @@
                     <div class="col">
                         <div class="site-logo-wrap">
                             <div class="site-logo">
-                                <a href="index.html"><img src="img/logo.png" alt="Logo"></a>
+                                <a href="index.html"><img src="/img/logo.png" alt="Logo"></a>
                             </div>
                         </div>
                     </div>
@@ -61,7 +61,7 @@
                                     <ul>
                                         <li><a href="login.html">Sign in</a></li>
                                         <li><a href="register.html">Register</a></li>
-                                        <li><a href="account.html">My Account</a></li>
+                                        <li><a href="/index/account">My Account</a></li>
                                         <li><a href="wishlist.html">Wishlist</a></li>
                                     </ul>
                                 </li>
