--- a/DATN_F21/src/main/resources/templates/viewsUser/account.html
+++ b/DATN_F21/src/main/resources/templates/viewsUser/account.html
@@ -19,7 +19,7 @@
                             </div>
                             <div class="ltn__breadcrumb-list">
                                 <ul>
-                                    <li><a href="index">Home</a></li>
+                                    <li><a href="/index">Home</a></li>
                                     <li>My Account</li>
                                 </ul>
                             </div>
@@ -42,11 +42,11 @@
                                         <div class="ltn__tab-menu-list mb-50">
                                             <div class="nav">
                                                 <a class="active show" data-toggle="tab" href="#liton_tab_1_1">Dashboard <i class="fas fa-home"></i></a>
-                                                <a data-toggle="tab" href="#liton_tab_1_2">??n hàng <i class="fas fa-file-alt"></i></a>
+                                                <a data-toggle="tab" href="#liton_tab_1_2">??n hï¿½ng <i class="fas fa-file-alt"></i></a>
                                                 <a data-toggle="tab" href="#liton_tab_1_3">Downloads <i class="fas fa-arrow-down"></i></a>
                                                 <a data-toggle="tab" href="#liton_tab_1_4">address <i class="fas fa-map-marker-alt"></i></a>
                                                 <a data-toggle="tab" href="#liton_tab_1_5">Account Details <i class="fas fa-user"></i></a>
-                                                <a data-toggle="tab" href="#liton_tab_1_6">Ví ?i?n t?<i class="fas fa-user"></i></a>
+                                                <a data-toggle="tab" href="#liton_tab_1_6">Vï¿½ ?i?n t?<i class="fas fa-user"></i></a>
                                                 <a href="login.html">Logout <i class="fas fa-sign-out-alt"></i></a>
                                             </div>
                                         </div>
@@ -65,25 +65,25 @@
                                                         <table class="table">
                                                             <thead>
                                                                 <tr>
-                                                                    <th>??n hàng</th>
-                                                                    <th>Ngày ??t</th>
-                                                                    <th>Tr?ng thái</th>
+                                                                    <th>??n hï¿½ng</th>
+                                                                    <th>Ngï¿½y ??t</th>
+                                                                    <th>Tr?ng thï¿½i</th>
                                                                     <th>T?ng s? ti?n</th>
-                                                                    <th>Hành ??ng</th>
+                                                                    <th>Hï¿½nh ??ng</th>
                                                                 </tr>
                                                             </thead>
                                                             <tbody>
                                                                 <tr>
                                                                     <td>1</td>
                                                                     <td>Jun 22, 2019</td>
-                                                                    <td>?ã giao</td>
+                                                                    <td>?ï¿½ giao</td>
                                                                     <td>$3000</td>
                                                                     <td><a href="/index/cart">Xem</a></td>
                                                                 </tr>
                                                                 <tr>
                                                                     <td>2</td>
                                                                     <td>Nov 22, 2019</td>
-                                                                    <td>?ã giao</td>
+                                                                    <td>?ï¿½ giao</td>
                                                                     <td>$200</td>
                                                                     <td><a href="/index/cart">Xem</a></td>
                                                                 </tr>
@@ -205,13 +205,13 @@
                                             </div>
                                             <div class="tab-pane fade" id="liton_tab_1_6">
                                                 <div class="ltn__myaccount-tab-content-inner">
-                                                    <p>B?n c?n liên k?t tài kho?n ngân hàng v?i ví ?i?n t? ?? có th? thanh toán hàng hóa.</p>
+                                                    <p>B?n c?n liï¿½n k?t tï¿½i kho?n ngï¿½n hï¿½ng v?i vï¿½ ?i?n t? ?? cï¿½ th? thanh toï¿½n hï¿½ng hï¿½a.</p>
                                                     <div class="ltn__form-box">
                                                         <h4>Chi ti?t th?</h4>
                                                         <form action="#">
                                                             <div class="row mb-50">
                                                                 <div class="col-md-12">
-                                                                    <label>H? tên trên th?:</label>
+                                                                    <label>H? tï¿½n trï¿½n th?:</label>
                                                                     <input type="text" name="ltn__name">
                                                                 </div>
                                                                 <div class="col-md-12">
@@ -226,16 +226,16 @@
                                                                     </div>
                                                                 </div>
                                                                 <div class="col-md-6">
-                                                                    <label>Ngày h?t h?n:</label>
-                                                                    <input type="text" name="ltn__lastname" placeholder="Ngày h?t h?n (MM/YY)">
+                                                                    <label>Ngï¿½y h?t h?n:</label>
+                                                                    <input type="text" name="ltn__lastname" placeholder="Ngï¿½y h?t h?n (MM/YY)">
                                                                 </div>
                                                                 <div class="col-md-6">
-                                                                    <label>Mã CVV:</label>
-                                                                    <input type="text" name="ltn__lastname" placeholder="Mã CVV">
+                                                                    <label>Mï¿½ CVV:</label>
+                                                                    <input type="text" name="ltn__lastname" placeholder="Mï¿½ CVV">
                                                                 </div>
-                                                                <!-- <h4>??a ch? ??ng ký th? Tín d?ng/Ghi n?</h4>
+                                                                <!-- <h4>??a ch? ??ng kï¿½ th? Tï¿½n d?ng/Ghi n?</h4>
                                                                 <div class="col-md-12">
-                                                                    <label>??a ch? hóa ??n:</label>
+                                                                    <label>??a ch? hï¿½a ??n:</label>
                                                                     <input type="text" name="ltn__lastname">
                                                                 </div> -->
                                                                 <div class="col-md-12">
