--- a/DATN_F21/src/main/resources/templates/viewsUser/product-detail.html
+++ b/DATN_F21/src/main/resources/templates/viewsUser/product-detail.html
@@ -17,7 +17,7 @@
 							</div>
 							<div class="ltn__breadcrumb-list">
 								<ul>
-									<li><a href="index">Trang chủ</a></li>
+									<li><a href="/index">Trang chủ</a></li>
 									<li>Chi tiết sản phẩm</li>
 								</ul>
 							</div>
@@ -185,21 +185,14 @@
 								<div class="product-hover-action">
 									<ul>
 										<li>
-											<a href="#" title="Quick View" data-toggle="modal"
-												data-target="#quick_view_modal">
+											<a href="/index/product-detail" title="Quick View">
 												<i class="far fa-eye"></i>
 											</a>
 										</li>
 										<li>
-											<a href="/index/cart" title="Add to Cart" data-toggle="modal"
-												data-target="#add_to_cart_modal">
+											<a href="/index/cart" title="Add to Cart">
 												<i class="fas fa-shopping-cart"></i>
 											</a>
-										</li>
-										<li>
-											<a href="#" title="Wishlist" data-toggle="modal"
-												data-target="#liton_wishlist_modal">
-												<i class="far fa-heart"></i></a>
 										</li>
 									</ul>
 								</div>
