--- a/DATN_F21/src/main/resources/templates/viewsUser/cart.html
+++ b/DATN_F21/src/main/resources/templates/viewsUser/cart.html
@@ -17,7 +17,7 @@
 							</div>
 							<div class="ltn__breadcrumb-list">
 								<ul>
-									<li><a href="/index/">Trang chủ</a></li>
+									<li><a href="/index">Trang chủ</a></li>
 									<li>Giỏ hàng</li>
 								</ul>
 							</div>
