--- a/DATN_F21/src/main/resources/templates/viewsUser/checkout.html
+++ b/DATN_F21/src/main/resources/templates/viewsUser/checkout.html
@@ -17,7 +17,7 @@
                             </div>
                             <div class="ltn__breadcrumb-list">
                                 <ul>
-                                    <li><a href="index.html">Trang chủ</a></li>
+                                    <li><a href="/index">Trang chủ</a></li>
                                     <li>Thanh toán</li>
                                 </ul>
                             </div>
