--- a/DATN_F21/src/main/resources/templates/viewsUser/index.html
+++ b/DATN_F21/src/main/resources/templates/viewsUser/index.html
@@ -175,8 +175,7 @@
                                                     <div class="product-hover-action">
                                                         <ul>
                                                             <li>
-                                                                <a href="#" title="Quick View" data-toggle="modal"
-                                                                    data-target="#quick_view_modal">
+                                                                <a href="/index/product-detail" title="Quick View">
                                                                     <i class="far fa-eye"></i>
                                                                 </a>
                                                             </li>
