--- a/DATN_F21/src/main/resources/templates/viewsAdmin/EditUser.html
+++ b/DATN_F21/src/main/resources/templates/viewsAdmin/EditUser.html
@@ -62,7 +62,7 @@
 					<div class="col-sm-4">
 						<div class="thongtin_2">
 							<div class="image">
-								<img src="css/images/userim.jpg"
+								<img th:src="@{|/img/banner/userim.jpg|}"
 									class="img-thumbnail rounded-circle" alt="userimage"
 									width="250px" height="">
 							</div>
@@ -72,7 +72,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="btna">
+				<div class="btna row">
 					<button class="btn1" type="submit">Thêm</button>
 					<button class="btn2" type="submit">Cập Nhật</button>
 				</div>
