--- a/DATN_F21/src/main/resources/templates/layoutSeller/_footer.html
+++ b/DATN_F21/src/main/resources/templates/layoutSeller/_footer.html
@@ -1,9 +1,10 @@
 <div xmlns:th="http://www.thymeleaf.org">
   <footer class="chantrang">
-  	<div class="grid">
+  	<div class=" grid">
   	<div class="row">
-            <div class="grid_row">
+            <!-- <div class="grid_row"> -->
                 <div class="grid_column_3">
+                <div style="margin-left: 30px">
                     <h1 class="footer_header">CoolOrganic</h1>
                     <svg xmlns="http://www.w3.org/2000/svg" style="margin-top: -55px;" width="16" height="16" fill="currentColor" class="bi bi-geo-alt" viewBox="0 0 16 16">
                         <path d="M12.166 8.94c-.524 1.062-1.234 2.12-1.96 3.07A31.493 31.493 0 0 1 8 14.58a31.481 31.481 0 0 1-2.206-2.57c-.726-.95-1.436-2.008-1.96-3.07C3.304 7.867 3 6.862 3 6a5 5 0 0 1 10 0c0 .862-.305 1.867-.834 2.94zM8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10z"/>
@@ -19,30 +20,32 @@
                       </svg>
                     <label class="footer-item">nongsansach@gmail.com</label> 
                 </div>
-
+</div>
                 <div class="grid_column_3">
+                	<div style="margin-left: 30px">
                     <h4 class="footer_heading">Hỗ trợ</h4>
                     <label for="" class="footer-item">Đăng nhập</label><br>
                     <label for="" class="footer-item">Đăng xuất</label><br>
                     <label for="" class="footer-item">Đăng ký thành viên</label><br>
                     <label for="" class="footer-item">Giỏ hàng</label>
+                    </div>
                 </div>
                 <div class="grid_column_3">
                     <h4 class="footer_heading">Hướng dẫn</h4>
                     <label for="" class="footer-item">Hướng dẫn thanh toán</label>
-                    <label for="" class="footer-item">Điều khoản dịch vụ</label>
-                    <label for="" class="footer-item">Hướng dẫn mua hàng</label>
+                    <label for="" class="footer-item">Điều khoản dịch vụ</label> <br>
+                    <label for="" class="footer-item">Hướng dẫn mua hàng</label> <br>
                     <label for="" class="footer-item">Hướng dẫn giao nhận</label>
                 </div>
                 <div class="grid_column_3">
-                    <h4 class="footer_heading">Chính sách</h4>
-                    <label for="" class="footer-item">Chính sách vận chuyển</label>
+                    <h4 class="footer_heading">Chính sách</h4> <br>
+                    <label for="" class="footer-item">Chính sách vận chuyển</label> <br>
                     <label for="" class="footer-item">Chính sách bảo mật</label><br>
                     <label for="" class="footer-item">Chính sách đổi trả</label><br>
                     <label for="" class="footer-item">Quy định sử dụng</label>
                 </div>
             </div>
-            </div>
+           <!--  </div> -->
         </div>
   </footer>
 </div>
