--- a/DATN_F21/src/main/resources/templates/viewsUser/index.html
+++ b/DATN_F21/src/main/resources/templates/viewsUser/index.html
@@ -2688,7 +2688,7 @@
                                                     <div class="product-price">
                                                         <span>$32.00</span>
                                                     </div>
-                                                </div>
+                                                 </div>14
                                             </div>
                                         </div>
                                         <!-- ltn__product-item -->
