--- a/DATN_F21/src/main/resources/templates/viewsUser/checkout.html
+++ b/DATN_F21/src/main/resources/templates/viewsUser/checkout.html
@@ -5,7 +5,7 @@
     <main>
         <!-- BREADCRUMB AREA START -->
         <div class="ltn__breadcrumb-area ltn__breadcrumb-area-2 ltn__breadcrumb-color-white bg-overlay-theme-black-90 bg-image"
-            data-bg="img/bg/9.jpg">
+            data-bg="/img/bg/9.jpg">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
