update color at 9h30 PM on 25/10/2021

--- a/DATN_F21/src/main/resources/static/css/admin.css
+++ b/DATN_F21/src/main/resources/static/css/admin.css
@@ -19,7 +19,7 @@
   -----------------------------------------------*/
 .headers {
 	margin-top: 1px;
-	background-color: rgb(221, 221, 221);
+	background-color: #E6E6FA;
 	height: 70px;
 	width: 100%;
 }
@@ -52,7 +52,7 @@
 }
 
 .category_u {
-	margin-top: -18px;
+	/* margin-top: -18px; */
 	margin-left: 17px;
 }
 
@@ -155,6 +155,17 @@
 	margin: 10px;
 	background-color: white;
 	height: auto;
+}
+
+.main_UserList .UserList .container__UL .search_wrap h5
+{
+	margin-top: 10px;
+	margin-right: 20px;
+}
+
+.main_UserList .UserList .container__UL .search_wrap input
+{
+	height: 40px;
 }
 
 .taital h2 {
@@ -331,10 +342,15 @@
 	color: #3498db;
 }
 
-.containerUs .btna .btn1:hover, .btn2:hover {
-	color: #fff;
+.containerUs .btna .btn1:hover{
+	background-color: #1976D2;
+	color: white;
 }
 
+.containerUs .btna .btn2:hover {
+	background-color: #1976D2;
+	color: white;
+}
 .containerUs .btna button::before {
 	content: "";
 	position: absolute;
@@ -415,7 +431,7 @@
 	font-size: Helvetica, Arial, sans-serif;
 }
 
-.container_Category .border .foodter .btn button {
+.container_Category .border .foodter .btnc button {
 	border: 1px solid #3498db;
 	border-radius: 4px;
 	background: none;
@@ -429,6 +445,12 @@
 	overflow: hidden;
 	text-align: center;
 	margin-top: 25px;
+}
+
+.container_Category .border .foodter .btnc button:hover
+{
+	background-color: #1976D2;
+	color: white;
 }
 
 .container_Category .border .image {
@@ -478,7 +500,7 @@
 .container_Store .row .input_search_store {
 	width: 50%;
 	height: 40px;
-	border: 2px solid #aaa;
+	border: 1px solid #aaa;
 	border-radius: 4px;
 	margin: 8px 0;
 	outline: none;
