--- a/DATN_F21/src/main/resources/templates/viewsAdmin/Category.html
+++ b/DATN_F21/src/main/resources/templates/viewsAdmin/Category.html
@@ -12,9 +12,6 @@
                         <label for="">Tìm kiếm</label>
                         <div class="input-group mb-3 Search">
                             <input type="text" class="form-control " required placeholder="Loại sản phẩm......">
-                            <div class="input-group-append">
-                                <button class="btn btn-outline-secondary" type="submit">tìm</button>
-                            </div>
                         </div>
                     </form>
                 </div>
@@ -88,12 +85,12 @@
                             <input type="text" class="form-control">
                             <label for="">Trạng thái</label> <br>
                             <input type="radio" checked class="radioCate" name="Category" value="true"><label
-                                class="namecategory">Hoat dong</label>
+                                class="namecategory">Kích hoạt</label>
                             <input type="radio" class="radioCate" name="Category" value="false"><label
-                                class="namecategory">Khong hoat dong</label>
+                                class="namecategory">Khong kích hoạt</label>
                         </div>
                         <div class="foodter">
-                            <div class="btn">
+                            <div class="btnc">
                                 <button class="btn2" type="submit">Cập Nhật</button>
                                 <button class="btn2" type="submit">Thêm</button>
                             </div>
