--- a/DATN_F21/src/main/resources/templates/viewsAdmin/EditUser.html
+++ b/DATN_F21/src/main/resources/templates/viewsAdmin/EditUser.html
@@ -6,8 +6,8 @@
 	<main>
 		<div class="containerUs">
 			<form action="" method="">
-				<div class="row">
-					<div class="hello">
+				<div class="row" style="text-align: center;">
+					<div class="col-sm-12 hello" style="text-align: center;">
 						<h5>Chỉnh sửa người dùng</h5>
 					</div>
 				</div>
