--- a/DATN_F21/src/main/resources/templates/layoutAdmin/_menu.html
+++ b/DATN_F21/src/main/resources/templates/layoutAdmin/_menu.html
@@ -6,7 +6,7 @@
                   <a href="#"><img th:src="@{|/img/logo.jpg|}" alt="no" ></a>
               </div>
               <div class="col-sm-3">
-                  
+                  <img th:src="@{|/img/cai.jpg|}" class="img-thumbnail rounded-circle" width="20px" height="20px" alt="">
                   Admin
               </div>
           </header>
