--- a/DATN_F21/src/main/resources/templates/viewsAdmin/ListUser.html
+++ b/DATN_F21/src/main/resources/templates/viewsAdmin/ListUser.html
@@ -9,17 +9,12 @@
 			</div>
 			<div class="container__UL">
 				<div class="search_wrap">
-					<form action="" method="" id=""></form>
+					<form action="" method="" id="">
 					<div class="input-group mb-3">
-						<h5>Tìm kiếm : </h5>
+						<h5>Tìm kiếm </h5>
 						<input type="text" class="form-control" placeholder="Search........."
 							aria-label="Recipient's username" aria-describedby="button-addon2">
-						<button class="btn btn-outline-secondary" type="button" id="button-addon2"><svg
-								xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-								class="bi bi-search" viewBox="0 0 16 16">
-								<path
-									d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
-							</svg></button>
+						
 					</div>
 					</form>
 				</div>
