--- a/DATN_F21/src/main/resources/templates/viewsAdmin/StoreAd.html
+++ b/DATN_F21/src/main/resources/templates/viewsAdmin/StoreAd.html
@@ -11,15 +11,9 @@
                 </div>
                 <div class="col-sm-7">
                     <form action="" method="">
-                        <label class="lable_Search">Tìm kiếm : </label>
+                        <label class="lable_Search">Tìm kiếm </label>
                         <input type="text" name="" id="" placeholder="Tim kiem...." class="input_search_store" required>
-                        <button type="submit" class="btn_outline">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                class="bi bi-search" viewBox="0 0 16 16">
-                                <path
-                                    d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
-                            </svg>
-                        </button>
+                        
                     </form>
                 </div>
             </div>
