--- a/DATN_F21/src/main/resources/templates/LayoutUser/index.html
+++ b/DATN_F21/src/main/resources/templates/LayoutUser/index.html
@@ -14,10 +14,11 @@
      -->
 
 <!-- Place favicon.png in the root directory -->
-<link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
+<link rel="shortcut icon" href="/img/faviconlogo.ico" type="image/x-icon" />
 <!-- Font Icons css -->
 
 <link href="/css/font-icons.css" rel="stylesheet">
+
 <link href="/css/plugins.css" rel="stylesheet">
 
 <link href="/css/style.css" rel="stylesheet">
@@ -57,9 +58,9 @@
 	<!-- preloader area end -->
 
 	<!-- All JS Plugins -->
-	<script src="js/plugins.js"></script>
+	<script src="/js/plugins.js"></script>
 	<!-- Main JS -->
-	<script src="js/main.js"></script>
+	<script src="/js/main.js"></script>
 
 	<!-- Code injected by live-server -->
 	<script type="text/javascript">
