--- a/DATN_F21/src/main/resources/templates/viewsUser/checkout.html
+++ b/DATN_F21/src/main/resources/templates/viewsUser/checkout.html
@@ -5,7 +5,7 @@
     <main>
         <!-- BREADCRUMB AREA START -->
         <div class="ltn__breadcrumb-area ltn__breadcrumb-area-2 ltn__breadcrumb-color-white bg-overlay-theme-black-90 bg-image"
-            data-bg="img/bg/9.jpg">
+            data-bg="/img/bg/9.jpg">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
@@ -67,7 +67,7 @@
                                         <div class="row">
                                             <div class="col-md-6">
                                                 <div class="input-item input-item-name ltn__custom-icon">
-                                                    <input type="text" name="ltn__name" placeholder="Họ và tên"
+                                                    <input type="text" name="ltn__name" placeholder="Hờ và tên"
                                                         id="txtHoten" disabled="disabled">
                                                 </div>
                                             </div>
@@ -106,11 +106,11 @@
                                                 </div>
                                             </div> -->
                                             <div class="col-lg-12 col-md-12">
-                                                <h6>Địa chỉ</h6>
+                                                <h6>ĝịa chỉ</h6>
                                                 <div class="row">
                                                     <div class="col-md-12">
                                                         <div class="input-item">
-                                                            <input type="text" placeholder="Địa chỉ của bạn"
+                                                            <input type="text" placeholder="ĝịa chỉ của bạn"
                                                                 disabled="disabled">
                                                         </div>
                                                     </div>
@@ -192,7 +192,7 @@
                                             <td>$15.00</td>
                                         </tr>
                                         <tr>
-                                            <td><strong>Tổng tiền đơn hàng</strong></td>
+                                            <td><strong>Tổng tiờn đơn hàng</strong></td>
                                             <td><strong>$633.00</strong></td>
                                         </tr>
                                     </tbody>
@@ -207,9 +207,9 @@
                             <thead>
                                 <tr>
                                     <th scope="col">Sản phẩm</th>
-                                    <th scope="col">Đơn giá</th>
+                                    <th scope="col">ĝơn giá</th>
                                     <th scope="col">Số lượng</th>
-                                    <th scope="col">Thành tiền</th>
+                                    <th scope="col">Thành tiờn</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -239,7 +239,7 @@
 
                             </tbody>
                             <tbody>
-                                <th colspan="4" style="text-align: right;">Tổng tiền: <b style="color: red">....</b>
+                                <th colspan="4" style="text-align: right;">Tổng tiờn: <b style="color: red">....</b>
                                 </th>
                             </tbody>
                             <tbody>
@@ -270,14 +270,14 @@
                                 </div>
                             </tbody>
                             <tbody>
-                                <th colspan="4" style="text-align: right;">Tổng tiền: <b style="color: red">....</b>
+                                <th colspan="4" style="text-align: right;">Tổng tiờn: <b style="color: red">....</b>
                                 </th>
                             </tbody>
                         </table>
                         <table class="table table-striped table-bordered table-hover bg-light">
                             <tbody>
                                 <tr>
-                                    <td>Tổng tiền hàng </td>
+                                    <td>Tổng tiờn hàng </td>
                                     <td><strong>$150.00</strong></td>
                                 </tr>
                                 <tr>
@@ -285,7 +285,7 @@
                                     <td><strong>$15.00</strong></td>
                                 </tr>
                                 <tr>
-                                    <td><strong>Tổng tiền đơn hàng</strong></td>
+                                    <td><strong>Tổng tiờn đơn hàng</strong></td>
                                     <td><strong>$633.00</strong></td>
                                 </tr>
                             </tbody>
@@ -316,7 +316,7 @@
                                     bảo mật của chúng tôi.</p>
                             </div>
                             <button class="btn theme-btn-1 btn-effect-1 text-uppercase" type="submit"
-                                style="float: right">Đặt hàng</button>
+                                style="float: right">ĝặt hàng</button>
                         </div>
                     </div>
                     <hr>
@@ -340,7 +340,7 @@
                                         <div class="ltn__feature-info">
                                             <h4>Thực phẩm từ tự nhiên</h4>
                                             <p>Shop cho bạn đổi trả trong vòng 2 giờ sau khi thanh toán.</p>
-                                            <p>Sau 2 giờ shop không giải quyết bất kỳ vấn đề nào về sản phẩm.</p>
+                                            <p>Sau 2 giờ shop không giải quyết bất kỳ vấn đờ nào vờ sản phẩm.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -351,7 +351,7 @@
                                         </div>
                                         <div class="ltn__feature-info">
                                             <h4>Giao hàng nhanh chóng</h4>
-                                            <p>Chúng tôi sẽ ưu tiên vấn đề thời gian để tối ưu chất lượng sản phẩm, mong
+                                            <p>Chúng tôi sẽ ưu tiên vấn đờ thời gian để tối ưu chất lượng sản phẩm, mong
                                                 mang lại cho bạn nguồn thực phẩm tốt nhất.</p>
                                         </div>
                                     </div>
