--- a/DATN_F21/src/main/resources/templates/LayoutUser/index.html
+++ b/DATN_F21/src/main/resources/templates/LayoutUser/index.html
@@ -27,6 +27,8 @@
 <!-- Trung thêm -->
 <link href="/css/mycss.css" rel="stylesheet">
 
+<link href="/css/seller.css" rel="stylesheet">
+
 </head>
 <body>
 	<div class="body-wrapper">
