--- a/DATN_F21/src/main/resources/templates/LayoutUser/_menu.html
+++ b/DATN_F21/src/main/resources/templates/LayoutUser/_menu.html
@@ -28,7 +28,7 @@
                     <div class="col-lg-3">
                         <div class="site-logo-wrap">
                             <div class="site-logo">
-                                <a href="index.html"><img src="img/mylogo.png" alt="Logo" height="85px;"></a>
+                                <a href="index.html"><img th:src="@{|/img/logo4.png|}" alt="Logo" height="85px;" width="100%"></a>
                             </div>
                         </div>
                     </div>
