--- a/DATN_F21/src/main/resources/templates/layoutSeller/_footer.html
+++ b/DATN_F21/src/main/resources/templates/layoutSeller/_footer.html
@@ -32,13 +32,13 @@
                 </div>
                 <div class="grid_column_3">
                     <h4 class="footer_heading">Hướng dẫn</h4>
-                    <label for="" class="footer-item">Hướng dẫn thanh toán</label>
+                    <label for="" class="footer-item">Hướng dẫn thanh toán</label> <br>
                     <label for="" class="footer-item">Điều khoản dịch vụ</label> <br>
                     <label for="" class="footer-item">Hướng dẫn mua hàng</label> <br>
                     <label for="" class="footer-item">Hướng dẫn giao nhận</label>
                 </div>
                 <div class="grid_column_3">
-                    <h4 class="footer_heading">Chính sách</h4> <br>
+                    <h4 class="footer_heading">Chính sách</h4>
                     <label for="" class="footer-item">Chính sách vận chuyển</label> <br>
                     <label for="" class="footer-item">Chính sách bảo mật</label><br>
                     <label for="" class="footer-item">Chính sách đổi trả</label><br>
