--- a/DATN_F21/src/main/resources/templates/LayoutUser/_footer.html
+++ b/DATN_F21/src/main/resources/templates/LayoutUser/_footer.html
@@ -47,7 +47,7 @@
 						<label for="" class="footer-item">Hướng dẫn giao nhận</label>
 					</div>
 					<div class="grid_column_3">
-						<h4 class="footer_heading">Chính sách</h4> <br>
+						<h4 class="footer_heading">Chính sách</h4>
 						<label for="" class="footer-item">Chính sách vận chuyển</label> <br>
 						<label for="" class="footer-item">Chính sách bảo mật</label><br>
 						<label for="" class="footer-item">Chính sách đổi trả</label><br>
