--- a/DATN_F21/src/main/resources/templates/layoutSeller/_menu.html
+++ b/DATN_F21/src/main/resources/templates/layoutSeller/_menu.html
@@ -2,7 +2,9 @@
 	<nav>
 		<div class="row" style="background-color: blanchedalmond;">
         <div class="col-sm-9">
-            <img th:src="@{|/img/logo4.png|}" class="logo" alt="">
+        	<a th:href="@{|/index|}">
+            	<img th:src="@{|/img/logo4.png|}" class="logo" alt="">
+            </a>
         </div>
         <div class="col-sm-3">
         <img th:src="@{|/img/banner/1.jpg|}" class="rounded-circle" alt="..." height="40px" width="40px" style="margin-right: 10px">
