--- a/DATN_F21/src/main/resources/templates/viewsSeller/allProduct.html
+++ b/DATN_F21/src/main/resources/templates/viewsSeller/allProduct.html
@@ -54,6 +54,7 @@
                         <td>15.000</td>
                         <td>
                             <div class="icon-sp">
+                            <a th:href="@{|/viewsSeller/createProduct|}">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                     class="bi bi-pencil-square" viewBox="0 0 16 16">
                                     <path
@@ -61,6 +62,7 @@
                                     <path fill-rule="evenodd"
                                         d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z" />
                                 </svg>
+                               </a>
                             </div>
                         </td>
                     </tr>
