--- a/DATN_F21/src/main/resources/templates/viewsUser/index.html
+++ b/DATN_F21/src/main/resources/templates/viewsUser/index.html
@@ -23,7 +23,7 @@
                                             </div>
                                             <h6 class="slide-sub-title animated"><img src="/img/icons/icon-img/1.png"
                                                     alt="#"> 100% sản phẩm tự nhiên</h6>
-                                            <h1 class="slide-title animated ">Thực phẩm sạch <br>an toàn </h1>
+                                            <h1 class="slide-title animated ">Giảm ngay 5% cho<br> đơn hàng từ 99k</h1>
                                             <div class="slide-brief animated d-none">
                                                 <p><b>Rau củ tươi ngon, đảm bảo chất lượng</b> luôn là <b>tiêu chí hàng
                                                         đầu</b> của website nông sản online của chúng tôi.</p>
@@ -53,7 +53,7 @@
                                         <div class="slide-item-info-inner ltn__slide-animation">
                                             <h6 class="slide-sub-title animated"><img src="/img/icons/icon-img/1.png"
                                                     alt="#"> 100% sản phẩm tự nhiên</h6>
-                                            <h1 class="slide-title animated ">Thực phẩm sạch <br>an toàn </h1>
+                                            <h1 class="slide-title animated ">Giảm ngay 10% cho<br> đơn hàng từ 300k</h1>
                                             <div class="slide-brief animated">
                                                 <p><b>Rau củ tươi ngon, đảm bảo chất lượng</b> luôn là <b>tiêu chí hàng
                                                         đầu</b> của website nông sản online của chúng tôi.</p>
@@ -79,7 +79,7 @@
         </div>
         <!-- SLIDER AREA END -->
         <!-- BANNER AREA START -->
-        <div class="ltn__banner-area mt-120 mt--90 d-none">
+        <!-- <div class="ltn__banner-area mt-120 mt--90 d-none">
             <div class="container">
                 <div class="row ltn__custom-gutter--- justify-content-center">
                     <div class="col-lg-4 col-md-6">
@@ -105,10 +105,10 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- BANNER AREA END -->
         <!-- BANNER AREA START -->
-        <div class="ltn__banner-area mt-120">
+       <!--  <div class="ltn__banner-area mt-120">
             <div class="container">
                 <div class="row ltn__custom-gutter--- justify-content-center">
                     <div class="col-lg-6 col-md-6">
@@ -138,7 +138,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- BANNER AREA END -->
         <!-- PRODUCT TAB AREA START (product-item-3) -->
         <div class="ltn__product-tab-area ltn__product-gutter pt-85 pb-70">
