--- a/DATN_F21/src/main/resources/templates/layoutAdmin/_cart-info.html
+++ b/DATN_F21/src/main/resources/templates/layoutAdmin/_cart-info.html
@@ -34,7 +34,7 @@
                             <path
 									d="M7 5.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm-1.496-.854a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 1 1 .708-.708l.146.147 1.146-1.147a.5.5 0 0 1 .708 0zM7 9.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm-1.496-.854a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 0 1 .708-.708l.146.147 1.146-1.147a.5.5 0 0 1 .708 0z" />
                         </svg></span><a th:href="@{|/formStore|}">Xem tất cả</a></li>
-					<h4>Quản lý bản tin</h4>
+					<!-- <h4>Quản lý bản tin</h4>
 					<li><span><svg xmlns="http://www.w3.org/2000/svg"
 								width="16" height="16" fill="currentColor"
 								class="bi bi-card-list" viewBox="0 0 16 16">
@@ -42,7 +42,7 @@
 									d="M14.5 3a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h13zm-13-1A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-13z" />
                             <path
 									d="M5 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 5 8zm0-2.5a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5zm0 5a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5zm-1-5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0zM4 8a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0zm0 2.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0z" />
-                        </svg></span><a href="#">Bản tin</a></li>
+                        </svg></span><a href="#">Bản tin</a></li> -->
 					<h4>Thống kê</h4>
 					<li><span><svg xmlns="http://www.w3.org/2000/svg"
 								width="16" height="16" fill="currentColor"
