--- a/DATN_F21/src/main/resources/templates/layoutAdmin/_menu.html
+++ b/DATN_F21/src/main/resources/templates/layoutAdmin/_menu.html
@@ -3,10 +3,10 @@
       <div class="headers">
           <header class="row">
               <div class="col-sm-9">
-                  <a href="#"><img th:src="@{|/img/logo.jpg|}" alt="no" ></a>
+                  <a href="/index"><img th:src="@{|/img/logo.jpg|}" alt="no" ></a>
               </div>
               <div class="col-sm-3">
-                  <img th:src="@{|/img/cai.jpg|}" class="img-thumbnail rounded-circle" width="20px" height="20px" alt="">
+                  <img th:src="@{|/img/cai.jpg|}" class="img-thumbnail rounded-circle" width="80px" height="60px" alt="">
                   Admin
               </div>
           </header>
