update lai file menuUser

--- a/DATN_F21/src/main/resources/templates/LayoutUser/_menu.html
+++ b/DATN_F21/src/main/resources/templates/LayoutUser/_menu.html
@@ -28,12 +28,12 @@
 
                         </div>
                     </div>
-                    <!-- <div class="col">                       
+                    <div class="col">                       
                             <form id="#" method="get"  action="#" class="mt-30">
                                 <input class="input-find" type="text" name="ltn__name" required="required" placeholder="Tìm kiếm sản phẩm...">                                  
                                 <button class="theme-btn-1 btn-find" type="submit"><i class="icon-search"></i></button>                                                                   
                             </form>
-                    </div> -->
+                    </div>
                     <div class="ltn__header-options ltn__header-options-2">                      
                         <div class="ltn__drop-menu user-menu">
                             <ul>
