--- a/DATN_F21/src/main/resources/templates/viewsUser/contact.html
+++ b/DATN_F21/src/main/resources/templates/viewsUser/contact.html
@@ -4,7 +4,7 @@
 <body>
 	<main>
 		<!-- CONTACT ADDRESS AREA START -->
-		<div class="ltn__contact-address-area mb-90">
+		<div class="ltn__contact-address-area mb-90 mt-40">
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-4">
