--- a/DATN_F21/src/main/resources/templates/viewsUser/fogot_password.html
+++ b/DATN_F21/src/main/resources/templates/viewsUser/fogot_password.html
@@ -4,7 +4,7 @@
 <body>
 	<main>
 		<!-- FOGOT PASSWORD AREA START (Register) -->
-		<div class="ltn__login-area pb-110">
+		<div class="ltn__login-area pb-110 mt-40">
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-12">
