--- a/DATN_F21/src/main/resources/templates/viewsUser/register.html
+++ b/DATN_F21/src/main/resources/templates/viewsUser/register.html
@@ -4,7 +4,7 @@
 <body>
 	<main>
 		<!-- REGISTER AREA START -->
-    <div class="ltn__login-area pb-65">
+    <div class="ltn__login-area pb-65 mt-40">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
