--- a/DATN_F21/src/main/resources/templates/LayoutUser/_menu.html
+++ b/DATN_F21/src/main/resources/templates/LayoutUser/_menu.html
@@ -1,88 +1,63 @@
-<div xmlns:th = "http://www.thymeleaf.org">
-<!-- HEADER AREA START (header-5) -->
-    <header class="ltn__header-area ltn__header-5 ltn__header-transparent gradient-color-4---">
-       
-        <!-- ltn__header-middle-area start -->
-        <div class="ltn__header-middle-area ltn__header-sticky ltn__sticky-bg-white sticky-active-into-mobile--- plr--9---" style="background-color: #58ed58;">
-            <div class="container">
-                <div class="menu-center">
-                    <div class="col header-menu-column menu-color-white---">
-                        <div class="header-menu d-none d-xl-block">
-                            <nav>
-                                <div class="ltn__main-menu">
-                                    <ul>
-<<<<<<< HEAD
-                                        <li class="menu-icon"><a href="/index">Trang chủ</a></li>
-                                        <li class="menu-icon"><a href="#">News</a>
-                                            <ul>
-                                                <li><a href="blog.html">News</a></li>
-                                            </ul>
-                                        </li>
-                                        <li><a href="/contact">Liên hệ</a></li>
-=======
-                                        <li class="menu-icon"><a href="/formAd">Admin</a></li>
-                                   
-                                        <li><a href="/formSeller">Seller</a></li>
->>>>>>> d617d6556556bc9190b2eeed18b660190dedd35c
-                                    </ul>
-                                </div>
-                            </nav>
-                        </div>
-                    </div>                   
-                </div>
-                <div class="row">
-                    <div class="col-lg-4">
-                        <div class="site-logo-wrap">
-                            <div class="site-logo">
-<<<<<<< HEAD
-                                <a href="index.html"><img src="/img/logo4.png" alt="Logo" width="120%" height="85px;"></a>
-                            </div>
-=======
-                                <a href="/index"><img th:src="@{|/img/logo4.png|}" alt="Logo" height="85px;" width="100%"></a>
+<div xmlns:th="http://www.thymeleaf.org">
+	<!-- HEADER AREA START (header-5) -->
+	<header
+		class="ltn__header-area ltn__header-5 ltn__header-transparent gradient-color-4---">
 
->>>>>>> d617d6556556bc9190b2eeed18b660190dedd35c
-                        </div>
-                    </div>
-                    <div class="col">                       
-                            <form id="#" method="get"  action="#" class="mt-30">
-                                <input class="input-find" type="text" name="ltn__name" required="required" placeholder="Tìm kiếm sản phẩm...">                                  
-                                <button class="theme-btn-1 btn-find" type="submit"><i class="icon-search"></i></button>                                                                   
-                            </form>
-                    </div>
-                    <div class="ltn__header-options ltn__header-options-2">                      
-                        <div class="ltn__drop-menu user-menu">
+		<!-- ltn__header-middle-area start -->
+		<div
+			class="ltn__header-middle-area ltn__header-sticky ltn__sticky-bg-white sticky-active-into-mobile--- plr--9---"
+			style="background-color: #58ed58;">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-4">
+                        <div class="ltn__main-menu" style="margin-top: -50px;">
                             <ul>
-                                <li>
-                                    <a href="#"><i class="icon-user"></i></a>
-                                    <ul>
-                                        <li><a href="/login">Đăng nhập</a></li>
-<<<<<<< HEAD
-                                        <li><a href="/register">Đăng ký</a></li>
-                                        <li><a href="/account/information">Tài khoản</a></li>
-=======
-                                        <li><a href="/register">Đăng kí</a></li>
-                                        <li><a href="/my_account">Tài khoản</a></li>
->>>>>>> d617d6556556bc9190b2eeed18b660190dedd35c
-                                    </ul>
-                                </li>
+                                <li class="menu-icon"><a href="/formAd">Admin</a></li>
+                                <li><a href="/formSeller">Seller</a></li>
                             </ul>
                         </div>
-                        <!-- mini-cart -->
-                        <div class="mini-cart-icon">
-                            <a th:href="@{|/index/cart|}">
-                                <i class="icon-shopping-cart"></i>
-                                <sup>2</sup>
-                            </a>
-                        </div>
-                        <!-- mini-cart -->
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- ltn__header-middle-area end -->
-    </header>
-    <!-- HEADER AREA END -->
-   
-    <div style="padding-top: 120px; padding-bottom: 55px;"></div>
-  
-    </div>
+						<div class="site-logo-wrap">
+							<div class="site-logo">
+								<a href="/index"><img th:src="@{|/img/logo4.png|}"
+									alt="Logo" height="85px;" width="120%"  style="margin-left: -30px;"></a>
+							</div>
+						</div>
+					</div>
+					<div class="col">
+						<form id="#" method="get" action="#" class="mt-30">
+							<input class="input-find" type="text" name="ltn__name"
+								required="required" placeholder="Tìm kiếm sản phẩm...">
+							<button class="theme-btn-1 btn-find" type="submit">
+								<i class="icon-search"></i>
+							</button>
+						</form>
+					</div>
+					<div class="ltn__header-options ltn__header-options-2">
+						<div class="ltn__drop-menu user-menu">
+							<ul>
+								<li><a href="#"><i class="icon-user"></i></a>
+									<ul>
+										<li><a href="/login">Đăng nhập</a></li>
+										<li><a href="/register">Đăng ký</a></li>
+										<li><a href="/account/information">Tài khoản</a></li>
+									</ul></li>
+							</ul>
+						</div>
+						<!-- mini-cart -->
+						<div class="mini-cart-icon">
+							<a th:href="@{|/index/cart|}"> <i class="icon-shopping-cart"></i>
+								<sup>2</sup>
+							</a>
+						</div>
+						<!-- mini-cart -->
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- ltn__header-middle-area end -->
+	</header>
+	<!-- HEADER AREA END -->
+
+	<div style="padding-top: 120px; padding-bottom: 55px;"></div>
+
+</div>
