create service - rest controller

--- a/DATN_F21/src/main/resources/templates/LayoutUser/_footer.html
+++ b/DATN_F21/src/main/resources/templates/LayoutUser/_footer.html
@@ -14,7 +14,7 @@
 									d="M12.166 8.94c-.524 1.062-1.234 2.12-1.96 3.07A31.493 31.493 0 0 1 8 14.58a31.481 31.481 0 0 1-2.206-2.57c-.726-.95-1.436-2.008-1.96-3.07C3.304 7.867 3 6.862 3 6a5 5 0 0 1 10 0c0 .862-.305 1.867-.834 2.94zM8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10z" />
 								<path d="M8 8a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm0 1a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
 							</svg>
-							<label for="" class="footer-item">117/4A 3/2, Hưng Lợi, Ninh Kiờu, <br>Cần
+							<label for="" class="footer-item">117/4A 3/2, Hưng Lợi, Ninh Kiều, <br>Cần
 								Thơ</label><br>
 							<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
 								class="bi bi-telephone" viewBox="0 0 16 16">
@@ -33,16 +33,16 @@
 					<div class="grid_column_3">
 						<div style="margin-left: 30px">
 							<h4 class="footer_heading">Hỗ trợ</h4>
-							<label for="" class="footer-item">ĝăng nhập</label><br>
-							<label for="" class="footer-item">ĝăng xuất</label><br>
-							<label for="" class="footer-item">ĝăng ký thành viên</label><br>
+							<label for="" class="footer-item">Đăng nhập</label><br>
+							<label for="" class="footer-item">Đăng xuất</label><br>
+							<label for="" class="footer-item">Đăng ký thành viên</label><br>
 							<label for="" class="footer-item">Giờ hàng</label>
 						</div>
 					</div>
 					<div class="grid_column_3">
 						<h4 class="footer_heading">Hướng dẫn</h4>
 						<label for="" class="footer-item">Hướng dẫn thanh toán</label>
-						<label for="" class="footer-item">ĝiờu khoản dịch vụ</label> <br>
+						<label for="" class="footer-item">Điều khoản dịch vụ</label> <br>
 						<label for="" class="footer-item">Hướng dẫn mua hàng</label> <br>
 						<label for="" class="footer-item">Hướng dẫn giao nhận</label>
 					</div>
