--- a/DATN_F21/src/main/resources/templates/LayoutUser/index.html
+++ b/DATN_F21/src/main/resources/templates/LayoutUser/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" th:fragment="dynamic(main)">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+	th:fragment="dynamic(main)">
 <head>
 <meta charset="utf-8">
 <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -8,10 +9,6 @@
 <meta name="description" content="">
 <meta name="viewport"
 	content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-<!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-  	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-     -->
 
 	<!--My's part-->
 <!-- Place favicon.png in the root directory -->
@@ -31,8 +28,9 @@
 
 <link href="/css/seller.css" rel="stylesheet">
 
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.2/angular.min.js"></script>
 </head>
-<body>
+<body  ng-app="buyer-app" ng-controller="buyer-ctrl">
 	<div class="body-wrapper">
 		<nav>
 			<div th:replace="/layoutUser/_menu.html"></div>
@@ -117,6 +115,7 @@
 		}
 		// ]]>
 	</script>
+	<script src="/app_js/buyer.js"></script>
 </body>
 
 </html>
