--- a/DATN_F21/src/main/resources/templates/layoutAdmin/index.html
+++ b/DATN_F21/src/main/resources/templates/layoutAdmin/index.html
@@ -48,9 +48,11 @@
 	src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 <script
 	src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+	
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.2/angular.min.js"></script>
 </head>
 
-<body>
+<body ng-app="admin-app" ng-controller="admin-ctrl">
 	<!-- Pre-loader start -->
 	<div class="theme-loader">
 		<div class="ball-scale">
@@ -149,6 +151,7 @@
 			}
 		});
 	</script>
+	<script src="/app_js/admin.js"></script>
 </body>
 
 </html>
