--- a/DATN_F21/src/main/resources/templates/layoutSeller/index.html
+++ b/DATN_F21/src/main/resources/templates/layoutSeller/index.html
@@ -48,9 +48,12 @@
 	src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 <script
 	src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.2/angular.min.js"></script>
+
 </head>
 
-<body>
+<body  ng-app="seller-app" ng-controller="seller-ctrl">
 	<!-- Pre-loader start -->
 	<div class="theme-loader">
 		<div class="ball-scale">
@@ -150,6 +153,8 @@
 			}
 		});
 	</script>
+
+	<script src="/app_js/seller.js"></script>
 </body>
 
 </html>
